add a read more button to card text 1

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Site selection</h5>
-                <p class="card-text">Among the tropical crops there is none that demands such precise requirement as tea does
+                <p class="card-text para1" >Site seelction is an important factor to consider when planting tea crops<br>
+                click the link below to find out more on site selection</p>
+                <a href="#" class="btn btn-primary btn1">Read More</a>
+
+                <p class="card-text" id="hiddenp">Among the tropical crops there is none that demands such precise requirement as tea does
                   if optimum yield is to be obtained. Tea requires a climate with specific limits of certain
                   attribute; a soil with special characters, a proper clearing and preparation of land prior to
                   planting. It is therefore of paramount importance that in selecting a site for tea, due
@@ -45,7 +49,7 @@
                   the best quality tea being produced at high altitudes that remain free from free from frost.
                   Crop Care should be taken during land preparation to remove all forest trees by ring barking
                   to avoid armillaria root rot disease.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary btn2">Go back</a>
               </div>
             </div>
           </div>
@@ -53,6 +57,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Planting</h5>
+
                 <p class="card-text">Sleeved plants are ready for transplanting when roots have reached the bottom of sleeves
                   and also have at least 20cm (8 in) of top growth. At the time of transplanting, the cylinder of
                   soil in sleeves should not be dry. The plants must be handled careful to avoid cracking the
