--- a/index.html
+++ b/index.html
@@ -20,6 +20,45 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>  
-</body>
+    <script src="js/index.js"></script> 
+    
+    <section id="esther">
+       <footer>
+          <div class="center">
+          <h2>Karibu Par-TEA!!<br>Contact Us...</h2>
+        </div>
+              <!-- <hr class="primary"> -->
+       <div class="container">
+      <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 text-center">
+         </div>
+          <div class="col-lg-10 col-lg-offset-1 text-center">
+              <form class="contact-form row">
+                  <div class="col-md-4">
+                      <label></label>
+                      <input id="jina" type="text" class="form-control" placeholder="Name">
+                  </div>
+                  <div class="col-md-4">
+                      <label></label>
+                      <input id="email" type="text" class="form-control" placeholder="Email">
+                  </div>
+                  <div class="col-md-4">
+                      <label></label>
+                      <input type="text" class="form-control" placeholder="Phone">
+                  </div>
+                  <div class="col-md-12">
+                      <label></label>
+                      <div class="m-description">
+                        <p>Got something to share with us?<br>Don't be chai&#128525;</p>
+                      </div>
+                      <textarea id="message" class="form-control" rows="9" placeholder="Type your message here..."></textarea>
+                  </div>
+                  <div class="col-md-4 col-md-offset-4">
+                    <label id="btnsubmit"></label>
+                    <button id="submit" type="button" 
+                        class="btn btn-primary btn-block btn-lg">Submit</button>
+                        </footer>
+    </section>
+    
+    </body>
 </html>
