Fix font style of the class m-description

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <div class="col-md-12">
                       <label></label>
                       <div class="m-description">
-                        <p>Got something to share with us?<br>Don't be chai&#128525;</p>
+                        <p>Got something?<br>Don't be chai&#128525;</p>
                       </div>
                       <textarea id="message" class="form-control" rows="9" placeholder="Type your message here..."></textarea>
                   </div>
