Removed the description text to achieve visibility

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <section id="esther">
        <footer>
           <div class="center">
-          <h2>Karibu Par-TEA!!<br>Contact Us...</h2>
+          <h2>Karibu Par-TEA!!<br>Contact Us&#128525;...</h2>
         </div>
               <!-- <hr class="primary"> -->
-       <div class="container">
+       <div id="clientdetails" class="container">
       <div class="row">
           <div class="col-lg-8 col-lg-offset-2 text-center">
          </div>
@@ -48,9 +48,6 @@
                   </div>
                   <div class="col-md-12">
                       <label></label>
-                      <div class="m-description">
-                        <p>Got something?<br>Don't be chai&#128525;</p>
-                      </div>
                       <textarea id="message" class="form-control" rows="9" placeholder="Type your message here..."></textarea>
                   </div>
                   <div class="col-md-4 col-md-offset-4">
