--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   <div class="col-md-4 col-md-offset-4">
                     <label id="btnsubmit"></label>
                     <button id="submit" type="button" 
-                        class="btn btn-primary btn-block btn-lg">Submit</button>
+                        class="btn btn-primary">Submit</button>
                         </footer>
                         <div class="container text-center">
                           <p>TEA-APP<br>2022</p>
