--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/profile.css">
   </head>
   <body>
       <div class="container">
@@ -34,7 +34,7 @@
         <div class="text-center">
         <p class="p2">As a farmer,it is essential to keep your farm produce records consistently.<br>
         Use our website and have control over your produce</p>
-        <button class="btn btn-success raine" id="updateRecord">Update Your Records</button><br>
+        <button class="btn btn-info raine" id="updateRecord">Update Your Records</button><br>
         
     </div><br>
     <div class="card" id="weightinput" style="width: 18rem; margin-left: 30%;">
@@ -61,10 +61,10 @@
         <table class="table">
             <thead>
               <tr>
-                <th scope="col">#</th>
                 <th scope="col">DATE</th>
-                <th scope="col">MONTH</th>
-                <th scope="col">YEAR</th>
+                <th scope="col">DAILY TOTALS</th>
+                <th scope="col">MONTHLY TOTALS</th>
+                <th scope="col">YEARLY TOTALS</th>
               </tr>
             </thead>
             <tbody>
@@ -84,6 +84,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>  
+    <script src="js/profile.js"></script>  
 </body>
 </html>
