Connect the name element to the logged name

--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
   </head>
   <body>
       <div class="container">
-      <h4 style="border: 3px; background-color: aliceblue; margin-top: 1%;" class="text-center">WELCOME:<span id="name">John Doe</span></h4>
+      <h4 style="border: 3px; background-color: aliceblue; margin-top: 1%;" class="text-center">Welcome <span id="name"></span></h4>
       </div>
    
       <div class="container-fluid profile">
