Link elements on profile.html and profile.js

--- a/profile.html
+++ b/profile.html
@@ -27,8 +27,8 @@
          <div class="farmerDetails">
         <p > Name: <span id="naame"></span></p>
         <p > Email:<span id="email"></span></p>
-        <p > Monthy Net weight:<span id="cumulativenetmonth"></span> </p>
-        <p > Yearly Net weight:<span id="cumulativenetyearly"></span> </p>
+        <p > Total Quantity Supplied (kgs):<span id="totalSupplied"></span> </p>
+        <!-- <p > Yearly Net weight:<span id="cumulativenetyearly"></span> </p> -->
         </div>
         </div>
         <div class="text-center">
@@ -48,7 +48,7 @@
           <input type="number" class="form-control" id="weight" placeholder="Enter today's net weight(kgs)" name="weight">
         </div><br>
         <div class="text-center">
-          <button type="submit" class="btn btn-success">Ok</button>
+          <button type="submit" id="okaybutton" class="btn btn-success">Ok</button>
         </div>
       </form>
     </div><br>
