update html file

--- a/index.html
+++ b/index.html
@@ -1,25 +1,82 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>TEA APP GROUP6</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--Google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=K2D:ital,wght@1,100&display=swap" rel="stylesheet">
+<head>
+<title>TEA APP GROUP6</title>
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!--Google fonts-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&family=K2D:ital,wght@1,100&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Bootstrap CSS v5.0.2 -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" href="css/index.css">
+</head>
+<body>
+<nav class="navbar navbar-inverse fixed-top">
+<div class="container-fluid">
+<div class="navbar-header">
+<a class="navbar-brand link-light" href="#">Tea Farm</a>
+</div>
+<ul class="nav navbar-nav">
+<li class="active"><a href="#" class="link-light">Home</a></li>
+<li><a href="#Profile" class="link-light">Profile</a></li>
+<li><a href="#Contact" class="link-light">Contact</a></li>
+<li><a href="#News"class="link-light">News</a></li>
+</ul>
+<ul class="nav navbar-nav navbar-right">
+<button type="button" class="btn btn-primary"> Sign Up</button>
+<button type="button" class="btn btn-primary"> Log In</button>
+</ul>
+</div>
+</nav> 
+<div class="container">
+<header>
+<img src="/assets/tea.jpg" alt="" height="300px">
+<P><strong>Tea farmers and workers</strong><br>Tea is the most popular drink in the world
+after water – an estimated 70,000 cups are drunk every second. Yet tea farmers and 
+workers struggle to get a fair deal. This can have a very real and human cost.
+<br>Tea farmers face the challenge of low and fluctuating prices for the green leaf they sell,
+and a lack of power in a tea supply chain dominated by large companies. <br>By managing their 
+production, farmers and workers can bring greater security, equality and opportunity to 
+the lives of their families and communities – and that’s just for starters.
+<br>When Kenya farmers choose Tea Farm, they will be able to manage their produce, and can work towards a more sustainable livelihood for themselves and their families.
+</P>
+</header>
+<div class="content">
+<p>
+</p>
+</div>
 
-    <!-- Bootstrap CSS v5.0.2 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
-  </head>
-  <body>
-      
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>  
+</div>
+
+<footer>
+<ol>
+<li>LOCATION</li>
+<li>Tea Farm, Kericho County</li>
+<li>Along Kericho Kisumu Road</li>
+</ol>
+<ol>
+<li>SIGN UP TO OUR NEWSLETTER</li>
+<li><a href="#News"class="link-light">Sign Up</a></a></li>
+
+</ol>
+<ol class="envelope">
+<li>Get In Touch</li>
+<li> (480)555-0103</li>
+<li>4517 Washington Ave.</li>
+<li>teafarm@teafarm.com</li>
+</ol>
+</footer>
+
+<!-- Bootstrap JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="js/index.js"></script> 
+
 </body>
+
 </html>
