--- a/sign.html
+++ b/sign.html
@@ -19,6 +19,20 @@
         <div class="container">
             <h4>ALREADY A MEMNBER?</h4>
             <h5>LOGIN</h5>
+            <form style="margin-left: 17vw;width: 30vw;">
+                <div class="form-group">
+                <label for="userName">Username</label>
+                <input type="text" class="form-control" id="userName"  placeholder="Type your username...">
+                <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                </div>
+                <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Type your password">
+                </div>
+                <button type="submit" class="btn btn-primary">Sign In</button>
+            </form>
+            <h6>Don't have an account yet? Click here to Register</h6>
+  
         </div>
           
       </section>
