--- a/sign.html
+++ b/sign.html
@@ -40,7 +40,7 @@
           <div class="container" id="sign">
             <h4>CREATE AN ACCOUNT</h4>
             
-            <form style="margin-left: 17vw;width: 30vw;">
+            <form style="margin-left: 17vw;width: 30vw;" id="sign-up">
                 <div class="form-group">
                     <label for="userName">Username</label>
                     <input type="text" class="form-control" id="userName"  placeholder="Type your username...">
