updated nabar right

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 <li><a href="#Profile" class="link-light">Profile</a></li>
 <li><a href="contact.html" class="link-light">Contact</a></li>
 <li><a href="info.html"class="link-light">News</a></li>
+
 </ul>
 <ul class="nav navbar-nav navbar-right">
-<button type="button" class="btn btn-primary"> Sign Up</button>
-<button type="button" class="btn btn-primary"> Log In</button>
+  <li><a href="sign.html"class="link-light"><strong style="border: 2cm;color: blue;">Sign In</strong></a></li>
+
 </ul>
 </div>
 </nav> 
