--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=K2D:ital,wght@1,100&display=swap" rel="stylesheet">
   <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/contact.css">
   </head>
   <body>
+    <nav class="navbar navbar-inverse fixed-top">
+        <div class="container-fluid">
+        <div class="navbar-header">
+        <a class="navbar-brand link-light" href="#">Tea Farm</a>
+        </div>
+        <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html" class="link-light">Home</a></li>
+        <li><a href="#Profile" class="link-light">Profile</a></li>
+        <li><a href="contact.html" class="link-light">Contact</a></li>
+        <li><a href="info.html"class="link-light">News</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+        <button type="button" class="btn btn-primary"> Sign Up</button>
+        <button type="button" class="btn btn-primary"> Log In</button>
+        </ul>
+        </div>
+        </nav>
     <section id="esther">
-    <footer>
+    
        <div class="center">
        <h2>Karibu Par-TEA!!<br>Contact Us&#128525;...</h2>
      </div>
@@ -45,13 +62,27 @@
                <div class="col-md-4 col-md-offset-4">
                  <label id="btnsubmit"></label>
                  <button id="submit" type="button" 
-                     class="btn btn-primary">Submit</button>
-                     </footer>
-                     <div class="container text-center">
-                       <p>TEA-APP<br>2022</p>
-                     </div>
+                     class="btn btn-primary">Submit
+                </button>
+            </form>
  </section>
-
+ <footer>
+    <ol>
+    <li>LOCATION</li>
+    <li>Tea Farm, Kericho County</li>
+    <li>Along Kericho Kisumu Road</li>
+    </ol>
+    <ol>
+    <li>SIGN UP TO OUR NEWSLETTER</li>
+    <li><a href="#News"class="link-light">Sign Up</a></a></li>
+    </ol>
+    <ol class="envelope">
+    <li>Get In Touch</li>
+    <li> (480)555-0103</li>
+    <li>4517 Washington Ave.</li>
+    <li>teafarm@teafarm.com</li>
+    </ol>
+ </footer>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
