--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <li><a href="info.html"class="link-light">News</a></li>
 </ul>
 <ul class="nav navbar-nav navbar-right">
-<button type="button" class="btn btn-primary"> Sign Up</button>
-<button type="button" class="btn btn-primary"> Log In</button>
+<button type="button" class="btn btn-primary" onclick="document.location='sign.html'"></a> Sign Up</button>
+<button type="button" class="btn btn-primary" onclick="document.location = 'sign.html#sign-up'"> Log In</button>
 </ul>
 </div>
 </nav> 
