update info html file

--- a/info.html
+++ b/info.html
@@ -26,8 +26,8 @@
         <li><a href="info.html"class="link-light">News</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-        <button type="button" class="btn btn-primary" onclick="document.location='sign.html'"></button>"> Sign Up</button>
-        <button type="button" class="btn btn-primary" onclick="document.location='sign.html'"></button>> Log In</button>
+        <button type="button" class="btn btn-primary" onclick="document.location='sign.html'"> Sign Up</button>
+        <button type="button" class="btn btn-primary" onclick="document.location='sign.html'"> Log In</button>
         </ul>
         </div>
         </nav>   
