--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 </ul>
 <ul class="nav navbar-nav navbar-right">
-  <li><a href="sign.html"class="link-light"><strong style="border: 2cm;color: blue;">Sign In</strong></a></li>
-
+<button type="button" class="btn btn-primary"> Sign Up</button>
+<button onClick="location.href='sign.html'"  type="button" class="btn btn-primary"> Log In</button>
 </ul>
 </div>
 </nav> 
