--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </ul>
 <ul class="nav navbar-nav navbar-right">
-<button type="button" class="btn btn-primary"> Sign Up</button>
+<button onClick="location.href='register.html'" type="button" class="btn btn-primary"> Sign Up</button>
 <button onClick="location.href='sign.html'"  type="button" class="btn btn-primary"> Log In</button>
 </ul>
 </div>
