update profile  html file

--- a/profile.html
+++ b/profile.html
@@ -16,6 +16,23 @@
     <link rel="stylesheet" href="css/profile.css">
   </head>
   <body>
+    <nav class="navbar navbar-inverse fixed-top">
+      <div class="container-fluid">
+      <div class="navbar-header">
+      <a class="navbar-brand link-light" href="#">Tea Farm</a>
+      </div>
+      <ul class="nav navbar-nav">
+      <li class="active"><a href="index.html" class="link-light">Home</a></li>
+      <li><a href="#Profile" class="link-light">Profile</a></li>
+      <li><a href="contact.html" class="link-light">Contact</a></li>
+      <li><a href="info.html"class="link-light">News</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+      <button type="button" class="btn btn-primary" onclick="document.location='sign.html'"> Sign Up</button>
+      <button type="button" class="btn btn-primary" onclick="document.location='sign.html'"> Log In</button>
+      </ul>
+      </div>
+      </nav>
       <div class="container">
       <h4 style="border: 3px; background-color: aliceblue; margin-top: 1%;" class="text-center">Welcome <span id="name"></span></h4>
       </div>
