update on the inner html linking to redirect to login and register

--- a/sign.html
+++ b/sign.html
@@ -33,7 +33,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary" onclick="Login()">Sign In</button>
             </form>
-            <h6>Don't have an account yet?<span>Click here </span>to Register</h6>
+            <h6>Don't have an account yet? <a href="register.html">Click here</a> to Register</h6>
 
         </div>
         
