--- a/register.html
+++ b/register.html
@@ -37,7 +37,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Sign up</button>
             </form>
-            <h6 >Already have an account ?<span> Log in</span></h6>
+            <h6 >Already have an account ?<a href="sign.html">Click here</a></h6>
 
         </div>
     </section>
