update sign html file

--- a/profile.html
+++ b/profile.html
@@ -23,13 +23,13 @@
       </div>
       <ul class="nav navbar-nav">
       <li class="active"><a href="index.html" class="link-light">Home</a></li>
-      <li><a href="#Profile" class="link-light">Profile</a></li>
+      <li><a href="profile.html" class="link-light">Profile</a></li>
       <li><a href="contact.html" class="link-light">Contact</a></li>
       <li><a href="info.html"class="link-light">News</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-      <button type="button" class="btn btn-primary" onclick="document.location='sign.html'"> Sign Up</button>
-      <button type="button" class="btn btn-primary" onclick="document.location='sign.html'"> Log In</button>
+      
+      <button type="button" class="btn btn-primary" onclick="document.location='index.html'"> Log Off</button>
       </ul>
       </div>
       </nav>
@@ -126,6 +126,24 @@
       </div> -->
   
 </div>
+<footer>
+  <ol>
+  <li>LOCATION</li>
+  <li>Tea Farm, Kericho County</li>
+  <li>Along Kericho Kisumu Road</li>
+  </ol>
+  <ol>
+  <li>SIGN UP TO OUR NEWSLETTER</li>
+  <li><a href="#News"class="link-light">Sign Up</a></a></li>
+  
+  </ol>
+  <ol class="envelope">
+  <li>Get In Touch</li>
+  <li> (480)555-0103</li>
+  <li>4517 Washington Ave.</li>
+  <li>teafarm@teafarm.com</li>
+  </ol>
+</footer>
 
       <!-- Bootstrap JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
