--- a/profile.html
+++ b/profile.html
@@ -85,15 +85,15 @@
                 <th scope="col">DATE</th>
                 <th scope="col">DAILY TOTALS</th>
                 <th scope="col">MONTHLY TOTALS</th>
-                <th scope="col">YEARLY TOTALS</th>
+                <!-- <th scope="col">YEARLY TOTALS</th> -->
               </tr>
             </thead>
             <tbody id="summaryTable">
               <tr>
-                <th scope="row">1</th>
-                <td id="dailyTotal" ></td>
-                <td id="monthlyTotal"></td>
-                <td id="YearlyTotal"></td>
+                <td><span id="daaate"></span></td>
+                <td ><span id="dailyTotal"></span></td>
+                <td ><span id="monthlyTotal"></span></td>
+                <td ><span id="YearlyTotal"></span></td>
               </tr>
               
             </tbody>
