add on click to button to redirect to profile page

--- a/sign.html
+++ b/sign.html
@@ -31,7 +31,7 @@
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="password" placeholder="Type your password">
                 </div>
-                <button type="submit" class="btn btn-primary" >login</button>
+                <button type="submit" class="btn btn-primary" onclick="location.href = 'profile.html'" >login</button>
             </form>
             <h6>Don't have an account yet? <a href="register.html">Click here</a> to Register</h6>
 
