--- a/sign.html
+++ b/sign.html
@@ -31,7 +31,7 @@
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="password" placeholder="Type your password">
                 </div>
-                <button type="submit" class="btn btn-primary" onclick="location.href = 'profile.html'" >login</button>
+                <button type="button" class="btn btn-primary" id="btnSignIn"  >login</button>
             </form>
             <h6>Don't have an account yet? <a href="register.html">Click here</a> to Register</h6>
 
@@ -44,6 +44,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script src="js/info.js"></script>  
+    <script src="js/sign.js"></script>  
 </body>
 </html>
