update landing page p  margin

--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@
 </nav> 
 <div class="container">
 <header>
+
+<h3 id="teaheading"><strong>TEA FARMERS AND WORKERS</strong></h3>
 <img src="/assets/tea.jpg" alt="" height="300px">
-<P><strong>TEA FARMERS AND WORKERS</strong><br><span class="intro text-secondary"> Tea is the most popular drink in the world
+<p class="firstp"> Tea is the most popular drink in the world
 after water – an estimated 70,000 cups are drunk every second. Yet tea farmers and 
-workers struggle to get a fair deal. This can have a very real and human cost.
-<br>Tea farmers also face the challenge of low and fluctuating prices for the green leaf they sell,
-and a lack of power in a tea supply chain dominated by large companies. <br>By managing their 
-production, farmers and workers can bring greater security, equality and opportunity to 
+workers struggle to get a fair deal. This can have a very real and human cost.</p>
+<p class="firstp">Tea farmers also face the challenge of low and fluctuating prices for the green leaf they sell,
+and a lack of power in a tea supply chain dominated by large companies. </p>
+<p class="firstp">By managing their production, farmers and workers can bring greater security, equality and opportunity to 
 the lives of their families and communities – and that’s just for starters.
-When Kenya farmers choose Tea Farm, they will be able to manage their produce, and can work towards a more sustainable livelihood for themselves and their families.</span>
-</P>
+When Kenya farmers choose Tea Farm, they will be able to manage their produce, and can work towards a more sustainable livelihood for themselves and their families.
+</p>
 </header>
 <div class="content">
 <p>
