add totals and siplay in the summary table

--- a/profile.html
+++ b/profile.html
@@ -85,16 +85,11 @@
                 <th scope="col">DATE</th>
                 <th scope="col">DAILY TOTALS</th>
                 <th scope="col">MONTHLY TOTALS</th>
-                <!-- <th scope="col">YEARLY TOTALS</th> -->
+                <th scope="col">YEARLY TOTALS</th>
               </tr>
             </thead>
             <tbody id="summaryTable">
-              <tr>
-                <td><span id="daaate"></span></td>
-                <td ><span id="dailyTotal"></span></td>
-                <td ><span id="monthlyTotal"></span></td>
-                <td ><span id="YearlyTotal"></span></td>
-              </tr>
+             
               
             </tbody>
           </table>
