relink the images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 <ul class="nav navbar-nav">
 <li class="active"><a href="#" class="link-light">Home</a></li>
-<li><a href="profile.html" class="link-light">Profile</a></li>
+<!-- <li><a href="profile.html" class="link-light">Profile</a></li> -->
 <li><a href="contact.html" class="link-light">Contact</a></li>
 <li><a href="info.html"class="link-light">News</a></li>
 
@@ -39,7 +39,7 @@
 <header>
 
 <h3 id="teaheading"><strong>TEA FARMERS AND WORKERS</strong></h3>
-<img src="/assets/tea.jpg" alt="" height="300px">
+<img src="./assets/tea.jpg" alt="" height="300px">
 <p class="firstp"> Tea is the most popular drink in the world
 after water – an estimated 70,000 cups are drunk every second. Yet tea farmers and 
 workers struggle to get a fair deal. This can have a very real and human cost.</p>
