--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="nav navbar-nav">
         <li class="active"><a href="index.html" class="link-light">Home</a></li>
-        <li><a href="profile.html" class="link-light">Profile</a></li>
+        <!-- <li><a href="profile.html" class="link-light">Profile</a></li> -->
         <li><a href="contact.html" class="link-light">Contact</a></li>
         <li><a href="info.html"class="link-light">News</a></li>
         
