--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" class="form-control" id="password" placeholder="Type your password">
                 </div>
-                <button type="submit" class="btn btn-primary">Sign up</button>
+                <button type="button" class="btn btn-primary" onClick="location.href='sign.html'">Sign up</button>
             </form>
             <h6 >Already have an account ?<a href="sign.html">Click here</a></h6>
 
